Fix not showing contact us background image

--- a/assets/scss/contact.scss
+++ b/assets/scss/contact.scss
@@ -45,7 +45,6 @@
 }
 
 #ContactUsForm {
-  background-image: url('../neuroblaze/assets/images/contact.jpg');
   background-size: cover;
   padding: 70px 0 100px;
 
