--- a/main.css
+++ b/main.css
@@ -843,7 +843,6 @@
     color: #fff; }
 
 #ContactUsForm {
-  background-image: url("../neuroblaze/assets/images/contact.jpg");
   background-size: cover;
   padding: 70px 0 100px; }
   #ContactUsForm > .row {
